# musicmetatagger

./: .gitignore  README.md  analysis_results.json  main.py  pyproject.toml  requirements.txt
app/: analyzer.py  metadata.py  rights.py  routes.py  tagger.py
corpus/: lyricsexactmatchtest.txt
musicmetatagger.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_analyzer.py  test_metadata.py  test_rights.py  test_tagger.py
tests/data/: lyrics.txt
